auth not done intrgited it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   bloc: ^7.1.0
   cached_network_image: ^3.1.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.0
+  firebase_core: ^1.6.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.2.0
@@ -71,6 +73,6 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_native_splash:
   color: "#fa3a3a"
-  image:  assets/splashscreen/splash.png
+  image: assets/splashscreen/splash.png
   android: true
   ios: true
