--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         flutter-version: '3.0.1'
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
+    - run: flutter build apk --debug --split-per-abi
 
 #     Test case are failing flutter SDk
 #     - run: flutter test
