--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '3.0.1'
+    - run: flutter clean
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
     - run: flutter build apk --debug --split-per-abi
@@ -19,4 +20,4 @@ jobs:
 #     Test case are failing flutter SDk
 #     - run: flutter test
     
-    - run: flutter build apk 
+#     - run: flutter build apk 
