--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Test, Build and Release apk
 jobs:
   build:
     name: Build APK
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -18,7 +18,7 @@ jobs:
    
 
 #     Test case are failing flutter SDk
-    - run: flutter test
+#     - run: flutter test
 
 #     Build APk (Some issue here)
 #     - run: flutter build apk 
