--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '3.0.1'
-    - run: flutter clean
+    - run: cd lib
+#     - run: flutter clean
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
    
