--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '3.0.1'
-    - run: cd lib
+        working-directory: ./lib
 #     - run: flutter clean
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
