--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Setup Flutter
+      working-directory: ./lib
+      run: flutter pub get
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '3.0.1'
-        working-directory: ./lib
 #     - run: flutter clean
-    - run: flutter pub get
-    - run: flutter format --set-exit-if-changed .
+#     - run: flutter pub get
+#     - run: flutter format --set-exit-if-changed .
    
 
 #     Test case are failing flutter SDk
