--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,16 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Flutter
       working-directory: ./lib
-      run: flutter pub get
+#       run: flutter pub get
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
         flutter-version: '3.0.1'
-#     - run: flutter clean
-#     - run: flutter pub get
-#     - run: flutter format --set-exit-if-changed .
+    - run: flutter clean
+    - run: flutter pub get
+    - run: flutter format --set-exit-if-changed .
    
 
 #     Test case are failing flutter SDk
